terminado todo el back y esta vez de verdad de la buena por lo que mañana se puede terminar de hacer el front
